# stable-diffusion-waylonwalker-com

./: .gitignore  README.md  dream_log.txt  markata.toml  prompts.txt  pyproject.toml
.github/workflows/: main.yml
archive/: index.html
stable_diffusion_waylonwalker_com/: load.py
